turtleart.diskfour.DiskFour.scala.error
Compilation error:
DiskFour:3: error: value purple is not a member of object java.awt.Color
  val couleurs = List(Color.black, Color.red, Color.yellow, Color.purple);
                                                                  ^